Fix homepage styling on tablets

--- a/webapp/src/main/webui/src/app/promo/promo.component.scss
+++ b/webapp/src/main/webui/src/app/promo/promo.component.scss
@@ -863,7 +863,7 @@ input, select, textarea {
 			display: block;
 			width: 100%;
 			text-align: center;
-			margin: 0 0 2em 0;
+			margin: 0 20px 2em 20px;
 		}
 
 		#header .image {
